css/style.css
@font-face {
  font-family: 'fraunces';
  src: url('/assets/fonts/fraunces/Fraunces-VariableFont_SOFT\,WONK\,opsz\,wght.ttf');
}

@font-face {
  font-family: 'manrope';
  src: url('/assets/fonts/manrope/Manrope-VariableFont_wght.ttf');
}

:root {
  /* Colors */
  --clr-shade-darker: #24053E;
  --clr-shade-lighter: #584D62;
  --clr-primary: #44FFA1;
  --clr-tint-darker: #fcf7ff;
  --clr-tint-lighter: #FFFFFF;

  /* Typography */
  --ff-serif: "fraunces", serif;
  --ff-sans: "manrope", sans-serif;
  --fw-regular: 400;
  --fw-semibold: 600;
  --fs-0: 1.125rem;
  --fs-1: 2rem;
  --fs-2: 3.5rem;
  --fs-3: 5rem;
  --lh-0: 2;
  --lh-1: 1.25;
  --lh-2: 1.14;
  --lh-3: 1;
}

/* GLOBAL STYLES */
body {
  font-family: var(--ff-sans);
  font-weight: var(--fw-regular);
  font-size: var(--fs-0);
  line-height: var(--lh-0);
  text-align: center;
  overflow-x: hidden;
}

::selection {
  color: var(--clr-shade-darker);
  background-color: var(--clr-primary);
}

article {
  /* for curved divider SVGs */
  position: relative;
}

h1,
h2,
span {
  font-family: var(--ff-serif);
  font-weight: var(--fw-semibold);
}

h1 {
  font-size: var(--fs-3);
  line-height: var(--lh-3);
  max-inline-size: 15ch;

  /* CHANGE ME!
     quick fix before proper flow is added */
  margin-block-start: 0;
}

h2 {
  font-size: var(--fs-1);
  line-height: var(--lh-1);
  max-inline-size: 30ch;
}

p {
  max-inline-size: 55ch;
}

span {
  font-size: var(--fs-1);
}

em {
  font-style: normal;
}

a {
  font-weight: var(--fw-semibold);
  color: var(--clr-tint-lighter);
}

a:hover {
  color: var(--clr-primary);
}

img {
  --max-img-width: 25rem;
  max-width: var(--max-img-width);
}

li {
  list-style: none;
}

/* COMPOSITION */

.flow > * + * {
  margin-block-start: var(--flow-space, 1em);
}

.wrapper {
  position: relative;
  max-inline-size: 80rem;
  margin-inline: auto;
}

.cluster {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space, 1rem);
	/* optional padding equal to the gap value */
  /* placeholder value is set */
  padding-inline: var(--space, max(calc(5vw - 3rem), 1rem));
	/* optional justify-content property */
  justify-content: space-between;
	/* optional align-items property */
}

.switcher {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space, 1rem);
  --threshold: 66rem;
  max-inline-size: 70rem;
  margin-inline: auto;
}

.switcher > * {
  flex-grow: 1;
  flex-basis: calc((var(--threshold) - 100%) * 999);
}

.with-sidebar {
  display: flex;
  flex-wrap: wrap;
  gap: var(--s1, 1rem);
  justify-content: center;
}

/* first-child = sidebar */
/* last-child = not sidebar */
/* swap order to swap sidebar from left to right */

.with-sidebar > :first-child {
	/* set flex-basis to set width of the sidebar */
	/* remove flex-basis for intrinsic sizing of sidebar */
  flex-basis: 5rem; 
  flex-grow: 1;
  align-self: center;
}

.with-sidebar > :last-child {
	/* adjust min-inline-size to set the wrapping breakpoint */
  flex-basis: 0;
  flex-grow: 999;
  min-inline-size: 80%;
}

/* UTILITY */
.section-padding {
  padding-inline: 1rem;
  padding-block: 5em;
}

.center-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.circle-text {
  display: inline-block;
  width: 1.75em;
  height: 1.75em;
  text-align: center;
  line-height: 1.65;
  border: 1px solid black;
  border-radius: 50%;
}

.margin-block-start-medium {
  margin-block-start: 3rem;
}

.margin-block-start-large {
  margin-block-start: 5rem;
}

.color-scheme-dark {
  color: var(--clr-tint-lighter);
  background-color: var(--clr-shade-darker);
}

.bg-color-tint-darker {
  background-color: var(--clr-tint-darker);
}

.bg-color-tint-lighter {
  background-color: var(--clr-tint-lighter);
}

.underline-offset {
  --thickness: 0.25ex;
  --offset: 0.75ex;
  text-decoration: underline;
  text-decoration-color: var(--clr-primary);
  text-decoration-thickness: var(--thickness);
  text-underline-offset: var(--offset);
  text-decoration-skip-ink: none;
}

em.underline-offset {
  --thickness: 0.1ex;
  --offset: 0.25ex;
}

.offset-image-container {
  position: relative;
  --image-size: clamp(16rem, 20rem + 20vw, 40rem);
  block-size: 0;
  inline-size: var(--image-size);
}

.position-absolute {
  position: absolute;
  pointer-events: none;
}

/* BLOCK */
#hero::after {
  content: '';
  display: block;
  position: absolute;
  inset-block-end: -100px;
  width: 100%;
  height: 100px;
  background-color: var(--clr-tint-darker);
}

#features {
  min-block-size: 32rem;
}

#features::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 2;
  inset-inline-start: -50%;
  inset-block-end: -500px;
  width: 5000px;
  height: 500px;
  background-color: #FFFFFF;
}

#test {
  background-color: var(--clr-tint-lighter);
}

/* EXCEPTION */
a[data-linktype="button"] {
  display: inline-block;
  text-decoration: none;
  color: var(--clr-shade-darker);
  background-color: var(--clr-primary);
  padding-block: 0.75em;
  padding-inline: 1.25em;
  margin-block-start: 2rem;
}

a[data-linktype="button"]:hover {
  color: var(--clr-primary);
  background-color: var(--clr-shade-darker);
  padding-block: calc(0.75em - 2px);
  padding-inline: calc(1.25em - 2px);
  border: 2px solid var(--clr-primary);
}

footer {
  --space: 2em;
  --flow-space: 3em;
  background-color: var(--clr-tint-lighter);
}

.offset-image-container:has(#smartphone) {
  margin-block-start: 10rem;
  padding-left: 20px;
}

#smartphone {
  max-inline-size: var(--image-size);
  z-index: 1;
  inset-block-start: calc(100% - calc(0.2 * var(--image-size)));
}

#founder {
  inset-block-start: -20rem;
  inset-inline-start: calc(50cqw - calc(var(--max-img-width) / 2));
}

.wrapper:has(#founder) {
  margin-block-start: calc(30rem - 15cqw);
  max-inline-size: 66rem;
  background-color: var(--clr-tint-lighter);
}

.wrapper:has(#founder) > :last-child {
  position: relative;
  padding-block: 3rem;

  h2 {
    margin-block-start: 0;
  }
}

#spiral-1 {
  inset-block-start: 4rem;
  inset-inline-start: calc(-20rem + 10cqw);
}

#spiral-2 {
  inset-block-start: 16rem;
  inset-inline-start: calc(100% - 8cqw);
}

#spiral-3 {
  inset-inline-end: 0;
  inset-block-end: 0;
}

/* Containers for text-align and centering in #features */
.container[data-containerName="switcher"] {
  container-name: switcher;
  container-type: inline-size;
}

.container[data-containerName="sidebar"] {
  container-name: sidebar;
  container-type: inline-size;
}

.container[data-containerName="founder"] {
  container-name: founder;
  container-type: inline-size;
}

/* hard-coded but could potentially make fluid with variables 
   min-width is (sidebar basis + gap) * 1 / (1 - main content percentage) 
   for example (5rem + 1 rem) * 1 / (1 - .8) = 30rem */

@container switcher (min-width: 30rem) and (max-width: 66rem) {
  /* sets a max width on the sidebar containers when in un-stacked mode
     so that they can be center-aligned with margin auto 
     also sets text-align*/
  .with-sidebar {
    max-width: 40rem;
    margin-inline: auto;
    text-align: start;
  }
}

@container switcher (min-width: 66rem) {
  /* prevents the sidebar layout from unstacking at large screen sizes */
  .with-sidebar {
    max-width: 24rem;
    margin-inline: auto;
  }

  .with-sidebar > :last-child {
    min-inline-size: 100%;
  }

  .margin-block-start-medium {
    margin-block-start: unset;
  }
}

@container founder (min-width: 66rem) {
  #founder {
    inset-inline-start: 1rem;
    inset-block-start: -12rem;
  }

  .wrapper:has(#founder) > :last-child {
    text-align: start;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    padding-inline: 3rem;
    margin-inline-start: 35cqw;
    margin-inline-end: 0;
    max-inline-size: 52rem;

    h2 {
      font-size: var(--fs-3);
    }
  }
}
/* MISCELLANEOUS */
/* Curved Shape Dividers from shapedivider.app */

/* Purple */
.custom-shape-divider-bottom-1712942751 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.custom-shape-divider-bottom-1712942751 svg {
  position: relative;
  display: block;
  width: calc(100% + 20vw);
  margin-inline-start: -10vw;
  height: 68px;
}

.custom-shape-divider-bottom-1712942751 .shape-fill {
  fill: var(--clr-tint-darker);
}

/* Cream */
.custom-shape-divider-bottom-1712942565 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  fill-opacity: 100%;
}

.custom-shape-divider-bottom-1712942565 svg {
  position: relative;
  display: block;
  width: calc(100% + 20vw);
  margin-inline-start: -10vw;
  height: 68px;
}

.custom-shape-divider-bottom-1712942565 .shape-fill {
  fill: var(--clr-tint-lighter);
}

